Add header to initd srcipt

--- a/templates/init.erb
+++ b/templates/init.erb
@@ -1,4 +1,10 @@
 #!/bin/sh
+#
+# rundeckd    Startup script for the rundeck
+#
+# chkconfig: 2345 90 10
+# description: rundeckd, providing rundeckd
+# pidfile: /var/run/rundeckd.pid
 
 . /etc/rundeck/profile
 
