--- a/templates/rundeck-config.erb
+++ b/templates/rundeck-config.erb
@@ -2,25 +2,27 @@ loglevel.default = "<%= @rd_loglevel %>"
 rdeck.base = "<%= @rdeck_base %>"
 rss.enabled = "<%= @rss_enabled %>"
 
+rundeck.security.useHMacRequestTokens = <%= @security_config['useHMacRequestTokens'] %>
+rundeck.security.apiCookieAccess.enabled = <%= @security_config['apiCookieAccess'] %>
+
 dataSource {
-  dbCreate = "<% @dataSource_properties['dbCreate'] %>"
-  url = "<%= @dataSource_properties['url'] %>"
-  driverClassName = "<%= @dataSource_properties['driverClassName'] %>"
-  username = "<%= @dataSource_properties['username'] %>"
-  password = "<%= @dataSource_properties['password'] %>"
-  dialect = "<%= @dataSource_properties['dialect'] %>"
+  dbCreate = "<%= @dataSource_dbCreate %>"
+  url = "<%= @dataSource_url %>"
 }
 
 grails {
+  <%- if !@mail_config.empty? %>
   mail {
     host = "<%= @mail_config['host'] %>"
     username = "<%= @mail_config['username'] %>"
     port = <%= @mail_config['port'] %>
     password = "<%= @mail_config['password'] %>"
     props = [<% @mail_config['props'].each do |k,v| -%>"<%= k %>":"<%= v %>",<% end %>]
+    default {
+      from = "<%= @mail_config['defaults.from'] %>"
+    }
   }
+  <%- end -%>
 }
-
-grails.mail.default.from = "<%= @mail_config['defaults.from'] %>"
 
 grails.serverURL = "<%= @grails_server_url %>"
